--- a/package.json
+++ b/package.json
@@ -1,5 +1,30 @@
 {
+  "name": "mern_blog",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server/server.js",
+    "dev": "nodemon server/server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GarzaNate/mern_blog.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "jsonwebtoken": "^9.0.2"
-  }
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.3",
+    "nodemon": "^3.1.0"
+  },
+  "bugs": {
+    "url": "https://github.com/GarzaNate/mern_blog/issues"
+  },
+  "homepage": "https://github.com/GarzaNate/mern_blog#readme"
 }
